# ewsresource

./: CMakeLists.txt  README  README.md  ews.kdev4  ewsresource.cpp  ewsresource.desktop  ewsresource.h  settings.kcfgc
